--- a/DS01_03_MarkDown_and_LaTex_Languages.ipynb
+++ b/DS01_03_MarkDown_and_LaTex_Languages.ipynb
@@ -9,9 +9,9 @@
    "source": [
     "# Markdown\n",
     "-------------------------\n",
-    "- it is subset of HTML language\n",
-    "- it is used in github\n",
-    "- it is used in NLP(training examples ,stories ..etc)\n",
+    "- It is subset of **HTML** language\n",
+    "- It is used in **github**\n",
+    "- It is used in **NLP**(training examples ,stories,intent,entities ..etc)\n",
     "\n",
     "* [Refer Main Website](https://daringfireball.net/projects/markdown/)\n",
     "* [Cheatsheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Here-Cheatsheet)"
@@ -63,14 +63,14 @@
    },
    "source": [
     "# 2. Emphasis\n",
-    "---------------------------------\n",
+    "---\n",
     "Emphasis, aka italics, with *asterisks* or _underscores_.\n",
     "\n",
     "Strong emphasis, aka bold, with **asterisks** or __underscores__.\n",
     "\n",
     "Combined emphasis with **asterisks and _underscores_**.\n",
     "\n",
-    "Strikethrough uses two tildes. ~~Scratch This~~"
+    "Strikethrough uses <u>two</u> tildes. ~~Scratch This~~"
    ]
   },
   {
@@ -223,7 +223,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "bBE52oHCbJBc"
    },
    "source": [
@@ -339,5 +338,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
