--- a/DS03_BasicDatatypes_objects.ipynb
+++ b/DS03_BasicDatatypes_objects.ipynb
@@ -7,15 +7,15 @@
     "id": "IWy7ETQmB8-i"
    },
    "source": [
-    "# Basic Data Types\n",
+    "# `Basic Data Types`\n",
     "-----------\n",
-    "- we have 5 types of basic datatypes\n",
+    "- We have `5` types of basic datatypes\n",
     "- Numbers\n",
     "    - int\n",
     "    - float\n",
     "    - complex\n",
     "- str\n",
-    "- bool\n"
+    "- bool"
    ]
   },
   {
@@ -25,7 +25,7 @@
     "id": "MWhf0e36B8-k"
    },
    "source": [
-    "## 1. Numbers\n",
+    "## Numbers\n",
     "------------"
    ]
   },
@@ -36,12 +36,12 @@
     "id": "7fkoqWbrB8-l"
    },
    "source": [
-    "### 1.1 Integer data type"
+    "### Integer data type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -82,10 +82,8 @@
        "13"
       ]
      },
-     "execution_count": 4,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 2,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -95,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -110,9 +108,7 @@
       ]
      },
      "execution_count": 3,
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -199,7 +195,7 @@
     "id": "nwCDpR11B8_B"
    },
    "source": [
-    "### 1.2 Float data type"
+    "### Float data type"
    ]
   },
   {
@@ -353,7 +349,7 @@
     "id": "V0uetheSB8_X"
    },
    "source": [
-    "### 1.3 Complex number data type"
+    "### Complex number data type"
    ]
   },
   {
@@ -511,9 +507,10 @@
     "id": "R0tSXyZFB8_v"
    },
    "source": [
-    "## 2. String data type\n",
+    "## String data type\n",
     "----------------\n",
-    "- To define str ,we can use either \"\" or ''"
+    "- To define str ,we can use either \"\" or ''\n",
+    "- to define multi line string use \"\"\"\"\"\" or ''''''"
    ]
   },
   {
@@ -590,7 +587,7 @@
     "id": "eUZxfCdLB8_7"
    },
    "source": [
-    "#### example 2:"
+    "### example 2:"
    ]
   },
   {
@@ -665,13 +662,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml=\"\"\"It is a multiline string,we should use three times double quotes or three times single qutos\n",
+    "then it will treat as string\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'It is a multiline string,we should use three times double quotes or three times single qutos\\nthen it will treat as string'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(ml)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "pVwzUoVeB9AD"
    },
    "source": [
-    "## 3. Boolian data type\n",
+    "## Boolian data type\n",
     "----------"
    ]
   },
@@ -860,7 +907,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
