--- a/DS04_Convert_one_Datatype_TO_OTherDatatype.ipynb
+++ b/DS04_Convert_one_Datatype_TO_OTherDatatype.ipynb
@@ -7,9 +7,9 @@
     "id": "Jklx6NC1kRU_"
    },
    "source": [
-    "# Type Casting \n",
-    "## Convert one DataType to Other DataType\n",
-    "-----\n",
+    "# `Type Casting`\n",
+    "---\n",
+    "* Convert one DataType to Other DataType\n",
     "- Convert one data type into other using functions\n",
     "    - int()    \n",
     "    - float()\n",
@@ -40,7 +40,7 @@
     "|11| complex to str | Possible |\n",
     "|12| complex to bool | Possible |\n",
     "|13| str to int* | **error** |\n",
-    "|14| str to float | **error** |\n",
+    "|14| str to float* | **error** |\n",
     "|15| str to complex | **error** |\n",
     "|16| str to bool | Possible |\n",
     "|17| bool to int | Possible |\n",
@@ -56,12 +56,12 @@
     "id": "XxYPOy8pkRVC"
    },
    "source": [
-    "## 1. Converting int to float ?"
+    "## Converting int to float ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -214,12 +214,12 @@
     "id": "i-LdjKwPkRVj"
    },
    "source": [
-    "## 2. Converting int to complex ?"
+    "## Converting int to complex ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -291,12 +291,12 @@
     "id": "SNKAfQBQkRVY"
    },
    "source": [
-    "## 3. Converting int to str ?"
+    "## Converting int to str ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -368,7 +368,7 @@
     "id": "Ss0ntK7kkRV0"
    },
    "source": [
-    "## 4. Converting int to bool ?\n",
+    "## Converting int to bool ?\n",
     "> int 0 is equal to bool False\n",
     "\n",
     "\n",
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -566,12 +566,12 @@
     "id": "n-Yx2arNkRWV"
    },
    "source": [
-    "## 5. converting str to int ?"
+    "## Converting str to int ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -666,7 +666,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "0S6qjUnLkRWg"
    },
    "source": [
@@ -710,5 +709,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
