--- a/DS05_reading_items_from_objects.ipynb
+++ b/DS05_reading_items_from_objects.ipynb
@@ -85,9 +85,9 @@
     "id": "Ko-ByrU-0E1x"
    },
    "source": [
-    "- each letter is called as one `item/element`(in above example no of items are 6)\n",
-    "- From left to right index numbers starts from 0 to n (in case of r language 1 to n)\n",
-    "- From right to left index numbers starts from -1 to -n "
+    "- Each letter is called as one `item/element`(in above example no of items are **6**)\n",
+    "- From left to right index numbers starts from **0** to **n** (in case of r language 1 to n)\n",
+    "- From right to left index numbers starts from **-1** to **-n** "
    ]
   },
   {
@@ -278,7 +278,24 @@
     "colab_type": "code",
     "id": "LvL7Osjq0E7F"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1;31mInit signature:\u001b[0m \u001b[0mslice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m/\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+       "\u001b[1;31mDocstring:\u001b[0m     \n",
+       "slice(stop)\n",
+       "slice(start, stop[, step])\n",
+       "\n",
+       "Create a slice object.  This is used for extended slicing (e.g. a[0:10:2]).\n",
+       "\u001b[1;31mType:\u001b[0m           type\n",
+       "\u001b[1;31mSubclasses:\u001b[0m     \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "slice?"
    ]
@@ -528,7 +545,7 @@
     "id": "_ayuMXSL0E--"
    },
    "source": [
-    "# Method 3. Fancy Reading\n",
+    "## Method 3. Fancy Reading\n",
     "- Get items of given indexes"
    ]
   },
