--- a/DS07_02_Tuple.ipynb
+++ b/DS07_02_Tuple.ipynb
@@ -254,7 +254,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "## Unpack Tuple"
+    "## Unpack (Tuple/list/str ... etc)"
    ]
   },
   {
