--- a/DS07_03_Dictionary.ipynb
+++ b/DS07_03_Dictionary.ipynb
@@ -7,7 +7,7 @@
     "id": "zaPtdPEA-4QR"
    },
    "source": [
-    "# Dictionary\n",
+    "# Dictionary(Third Data Structure){ }\n",
     "-----\n",
     "## What is dict?\n",
     "- `key and value pair` is called as dict\n",
@@ -18,7 +18,7 @@
     "- Keys are unique within a dictionary while values may not be.\n",
     "- keys are unique(immutable)\n",
     "- values may be duplicated(mutable)\n",
-    "- need to read data using keys(in case of string and list we read using index numbers)\n",
+    "- need to read data using keys(in case of string,list and tuple we read using index numbers)\n",
     "- [refer python help doc](https://docs.python.org/3/tutorial/datastructures.html)"
    ]
   },
@@ -1014,7 +1014,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
-  }
+  },
+  "toc-showcode": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
