--- a/DS07_04_Set.ipynb
+++ b/DS07_04_Set.ipynb
@@ -6,7 +6,8 @@
     "toc-hr-collapsed": false
    },
    "source": [
-    "# Set\n",
+    "# `Set (Fourth Data Struct)`\n",
+    "-------------\n",
     "\n",
     "- Build an `unordered` collection of `unique` elements\n",
     "- Set defined using {   }\n",
@@ -918,7 +919,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "employees = engineers | programmers | managers # union operator"
+    "employees = engineers | programmers | managers # union operator # recommended"
    ]
   },
   {
