--- a/DS08_01_Comparision Operators.ipynb
+++ b/DS08_01_Comparision Operators.ipynb
@@ -21,7 +21,7 @@
    "metadata": {
     "colab_type": "text",
     "id": "QAbhvLjYQvmi",
-    "toc-hr-collapsed": false
+    "toc-hr-collapsed": true
    },
    "source": [
     "## Comparison Operators (<, >, ==, <=, >=, !=)\n",
