--- a/DS13_for_loop.ipynb
+++ b/DS13_for_loop.ipynb
@@ -7,7 +7,7 @@
     "id": "rUBEydDwS9MP"
    },
    "source": [
-    "# For Loop\n",
+    "# `For Loop`\n",
     "---------\n",
     "- Python’s for statement iterates over the items of any below **sequence** objects, in the order that they appear in the sequence\n",
     "    - list\n",
@@ -418,6 +418,27 @@
    "metadata": {},
    "source": [
     "## Sending mail to multiple users from your Gmail account"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rritec@gmail.com\n",
+      "dwramreddy@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df =pd.read_csv(\"C:\\\\Users\\\\ramreddymyla\\\\Desktop\\\\maillist.csv\")\n",
+    "for i in df.mails:\n",
+    "    print(i)"
    ]
   },
   {
