--- a/DS01_01_introduction_and_installation.ipynb
+++ b/DS01_01_introduction_and_installation.ipynb
@@ -45,6 +45,9 @@
     "![image.png](https://github.com/rritec/datahexa/blob/master/images/python_can_do.png?raw=true)\n",
     "\n",
     "- Python mainly has two version `Python 2.x` and `Python 3.x`. For more information [refer](https://www.python.org/downloads/)\n",
+    "\n",
+    "- python2.X is no more https://pythonclock.org/\n",
+    "\n",
     "- Python has lot of packages around [205,803 +](https://pypi.org/)\n",
     "- Do i need to install directly python ?\n",
     "    - **No**. if we go direct then we need to spend lot of time to install one by one package of datascience\n",
@@ -146,7 +149,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
-  }
+  },
+  "toc-autonumbering": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
