--- a/DS07_01_List.ipynb
+++ b/DS07_01_List.ipynb
@@ -1149,7 +1149,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
-  }
+  },
+  "toc-showcode": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
