--- a/DS07_01_List.ipynb
+++ b/DS07_01_List.ipynb
@@ -121,7 +121,7 @@
     "id": "14CSTKylxqNQ"
    },
    "source": [
-    "> Define using another syntax: Using **list** function"
+    "> Define using another syntax: Using **list** class"
    ]
   },
   {
