--- a/DS13_for_loop.ipynb
+++ b/DS13_for_loop.ipynb
@@ -10,10 +10,12 @@
     "# `For Loop`\n",
     "---------\n",
     "- Python’s for statement iterates over the items of any below **sequence** objects, in the order that they appear in the sequence\n",
-    "    - list\n",
     "    - string\n",
-    "    - dictionary\n",
+    "    - list \n",
     "    - tuple\n",
+    "    - dictionary    \n",
+    "    - set\n",
+    "    - range\n",
     "    - ... etc \n",
     "2.\tFor each item in object(list, Dictionary...etc) , execute expression"
    ]
