--- a/DS03_BasicDatatypes_objects.ipynb
+++ b/DS03_BasicDatatypes_objects.ipynb
@@ -510,7 +510,7 @@
     "## String data type\n",
     "----------------\n",
     "- To define str ,we can use either \"\" or ''\n",
-    "- to define multi line string use \"\"\"\"\"\" or ''''''"
+    "- To define multiline string use \"\"\"\"\"\" or ''''''"
    ]
   },
   {
