--- a/DS04_Convert_one_Datatype_TO_OTherDatatype.ipynb
+++ b/DS04_Convert_one_Datatype_TO_OTherDatatype.ipynb
@@ -46,7 +46,7 @@
     "|17| bool to int | Possible |\n",
     "|18| bool to float | Possible |\n",
     "|19| bool to complex | Possible |\n",
-    "|20| bool to bool | Possible |\n"
+    "|20| bool to str | Possible |\n"
    ]
   },
   {
