--- a/DS07_01_List.ipynb
+++ b/DS07_01_List.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Data Structures\n",
     "* 4 types\n",
-    "* those are\n",
+    "* Those are\n",
     "    * list\n",
     "    * tuple\n",
     "    * set\n",
