--- a/DS07_03_Dictionary.ipynb
+++ b/DS07_03_Dictionary.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -153,15 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
     "id": "RCb3cM6Z-4Rk",
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "outputId": "ce23f1ee-bda1-4446-cea6-75c6a5a4bb35"
    },
    "outputs": [
@@ -171,10 +167,8 @@
        "dict"
       ]
      },
-     "execution_count": 9,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 2,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1015,6 +1009,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
   },
+  "toc-autonumbering": true,
   "toc-showcode": false
  },
  "nbformat": 4,
