--- a/DS08_01_Comparision Operators.ipynb
+++ b/DS08_01_Comparision Operators.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Operators\n",
     "------------\n",
-    "* Operators are three tyoes. Those are\n",
+    "* Operators are three types. Those are\n",
     "\n",
     "    1. Comparison oparators\n",
     "    2. Bool / logical operators\n",
