--- a/DS09_Bool_numpy_operators_logical_and_or_or_or_not.ipynb
+++ b/DS09_Bool_numpy_operators_logical_and_or_or_or_not.ipynb
@@ -622,7 +622,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
