--- a/DS08_01_Comparision Operators.ipynb
+++ b/DS08_01_Comparision Operators.ipynb
@@ -644,7 +644,7 @@
     }
    ],
    "source": [
-    "print(f\"Total Number of students passed in the exam are: {sum(marks<35)}\")"
+    "print(f\"Total Number of students passed in the exam are: {sum(marks>35)}\")"
    ]
   },
   {
