--- a/DS01_01_introduction_and_installation.ipynb
+++ b/DS01_01_introduction_and_installation.ipynb
@@ -103,7 +103,7 @@
    },
    "source": [
     "# 5. Instal Notepad ++(optional)\n",
-    "- [Download and Install](https://notepad-plus-plus.org/downloads/)"
+    "- [Download and Install](https://repo.anaconda.com/archive/Anaconda3-2023.07-2-Windows-x86_64.exe)"
    ]
   },
   {
