--- a/DS13_for_loop.ipynb
+++ b/DS13_for_loop.ipynb
@@ -444,6 +444,13 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "- Create app password by folowing this blog https://support.google.com/mail/answer/185833?hl=en"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -452,7 +459,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "please enter password: ················\n"
+      "please enter password: ········\n"
      ]
     },
     {
@@ -506,7 +513,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -520,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
